Fix profiles on mobile; add blog post background; fix image sizing

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -44,36 +44,6 @@ html, body {
 	bottom: 30px;
 }
 
-@media only screen and (min-device-width: 900px) {
-	.page-title {
-		font-size: 12em;
-	}
-	.scroll-chevron {
-		font-size: 3em;
-	}
-}
-
-@media only screen 
-and (min-device-width : 600px) 
-and (max-device-width : 900px) {
-	.page-title {
-		font-size: 8em;
-	}
-	#second-chevron {
-		display: none;
-	}
-}
-
-@media only screen and (max-device-width: 600px) {
-	.page-title {
-		text-align: center;
-		font-size: 4em;
-	}
-	#second-chevron {
-		display: none;
-	}
-}
-
 .renderList > ul {
 	list-style: square;
 	padding-inline-start: 40px;
@@ -96,4 +66,47 @@ and (max-device-width : 900px) {
 	flex-direction: column;
 }
 
+.info-card-media {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+}
 
+.blog-cover {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+@media only screen and (min-device-width: 900px) {
+	  .page-title {
+		    font-size: 12em;
+	  }
+	  .scroll-chevron {
+		    font-size: 3em;
+	  }
+}
+
+@media only screen 
+and (min-device-width : 600px) 
+and (max-device-width : 900px) {
+	  .page-title {
+		    font-size: 8em;
+	  }
+	  #second-chevron {
+		    display: none;
+	  }
+}
+
+@media only screen and (max-device-width: 600px) {
+	  .page-title {
+		    text-align: center;
+		    font-size: 4em;
+	  }
+	  #second-chevron {
+		    display: none;
+	  }
+    .info-card-media {
+        flex-flow: column;
+    }
+}
